# nqqueue

./: CONFIGURATION  COPYING  CREDITS  Makefile.am  README.md  configure.ac
src/: Makefile.am  cfg.c  cfg.h  delivery.c  delivery.h  general.c  general.h  nqqueue.c  nqqueue.h
src/plugins/: Makefile.am
src/plugins/general/: Makefile.am  black.c  clamav.c
src/plugins/user/: Makefile.am  dspam.c  quarantine.c  spamassassin.c  vquad.c
